# swift-cargo-problem

./: README.md
App/App/: AppDelegate.swift  ViewController.swift
App/App.xcodeproj/: project.pbxproj
App/App.xcodeproj/project.xcworkspace/xcuserdata/jessegrosjean.xcuserdatad/: UserInterfaceState.xcuserstate
Package1/: Cargo.toml
Package2/: Cargo.toml
Workspace.xcworkspace/: contents.xcworkspacedata
Workspace.xcworkspace/xcuserdata/jessegrosjean.xcuserdatad/: UserInterfaceState.xcuserstate
