[package]
name = "Package1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "mylib"

[dependencies]
uniffi = "0.24"

[build-dependencies]
uniffi = { version = "0.24", features = ["build"] }
